# bibrs

./: .gitignore  Cargo.toml  README.md
data/: bibrs.toml  common.sql
migration/20180516-full-db/: down.sql  up.sql
migration/20180730-from-old/: up.sql
src/: action.rs  config.rs  database.rs  entry_type.rs  file.rs  formatter.rs  main.rs  model.rs  ui.rs  util.rs
src/action/: add_item.rs  keywords.rs  mod.rs
src/database/: add_item.rs  journal.rs  mod.rs
src/formatter/: bibtex.rs  mod.rs
src/reader/: bibtex.rs  mod.rs  pandoc.rs
src/ui/: add_item.rs
test/data/: bibrs-test.toml  extract_test.txt  test.bib
