[package]
name = "bibrs"
version = "0.1.0"
authors = ["Keji Li <mail@keji.li>"]
edition = "2018"

[dependencies]
dirs = "2.0"
globset = "0.4"
itertools = "0.8"
latex-to-unicode = {git = "https://github.com/vks/latex-to-unicode.git"}
lazy_static = "1.3"
nom-bibtex = "0.2"
regex = "1.1"
rusqlite = "0.19"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
termion = "1.5"
toml = "0.5"
unicode-normalization = "0.1"
